--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
+    "reactjs-popup": "^2.0.5",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "semantic-ui-css": "^2.4.1",
